[package]
name = "crypto-arbitrage"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
websocket = "0.24.0"
tracing = "0.1"
tracing-subscriber = "0.2"